# bitarray

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: BitArray.h
scr/: BitArray.cpp  main.cpp
tests/: CMakeLists.txt  Tests.cpp
